# quantitative-finance-and-risk-management

./: README.md  lista_1.ipynb  lista_2.ipynb  lista_3.ipynb  pyproject.toml
.ipynb_checkpoints/: lista_1-checkpoint.ipynb  lista_2-checkpoint.ipynb  lista_2_mario-checkpoint.ipynb
