[tool.poetry]
name = "quantitative-finance-and-risk-management"
version = "0.1.0"
description = ""
authors = ["Ingrid Rosselis <ingridrosselis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pydocstyle = "^5.1.1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
