[tool.poetry]
name = "quantitative-finance-and-risk-management"
version = "0.1.0"
description = ""
authors = ["Ingrid Rosselis <ingridrosselis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
numpy = "^1.19.1"
matplotlib = "^3.3.1"
pandas = "^1.1.1"
notebook-as-pdf = "^0.3.1"
statsmodels = "^0.12.0"
sklearn = "^0.0"
pyportfolioopt = "^1.2.6"
quadprog = "^0.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
